src-liberty_parse-2.6/test/example.lut2.lib
library(example) {	
	technology(cmos);
    nom_process : 1.0;
    nom_temperature : "85" ;
    nom_voltage : "3.0" ;
	output_voltage( vout1) {
		vomax : 27;
	}
	simulation : "false";
	 lu_table_template(t111){
		variable_1 : total_output_net_capacitance;
		variable_2 : input_net_transition;
		index_1 ("-1.00, 2.00, 3.00, 4.00");
		index_2 ("1.00, 2.00, -3.00, 4.00, 5.00");
	}
    lu_table_template(template_3d) {
        variable_1 : related_out_total_output_net_capacitance;
        variable_2 : total_output_net_capacitance;
        variable_3 : input_net_transition;
        index_1 ("0.0, 1.5");
        index_2 ("0.0, 4.0");
        index_3 ("0.1, 2.0, 3.0");
    }
	input_voltage ( iv1 ) {
		vimax : 20.0;
	}
	type(thirtytwo){
		bit_width : 32;
	}
	type(sixteen) {
		bit_from : 15;
		bit_to   : 0;
	}

    cell(bank33) {
        ff_bank (IQ, IQN, 4){
	        clocked_on : "CK" ;
    	    next_state : "SE|(CK)" ;
        }
        pin(SE) {
            direction : input;
        }
        pin(CK) {
            direction : input;
        }
        bundle(Q) {
            members(Q0, Q1, Q2, Q3);
            direction : output;
            function  : "IQ";
        }
    }

	cell(AN2){
		area : 2;
		interface_timing : false;
		pin(A, B){
			direction : input;
			capacitance : 1;
		}
		memory(memx) {
			address_width : 11;
		}
		pin(Z){
			direction : output;
			function : "A ^ B";
			timing () {
				intrinsic_rise  : 0.49;
				intrinsic_fall  : 0.77;
				rise_resistance : 0.1443;
				fall_resistance : 0.0523;
				related_pin : "A B";
	            timing_sense    : positive_unate;

				rise_transition(t111) {
					index_1("0.500000,4.000000,8.000000,20.000000");
					index_2("0.010000,0.300000,0.900000,3.100000,6.000000");
					values(\
						" 0.022100, 0.026300, 0.058600, 0.077300, 0.113200",\
						" 0.102800, 0.107300, 0.115700, 0.135200, 0.183300",\
						" 0.223900, 0.225000, 0.228300, 0.258900, 0.301700",\
						" 1.159500, 1.159300, 1.160100, 1.168500, 1.182000");
				}
				fall_transition(t111) {
					index_1("0.500000,4.000000,8.000000,20.000000");
					index_2("0.010000,0.300000,0.900000,3.100000,6.000000");
					values(\
						" 0.022100, 0.026300, 0.058600, 0.077300, 0.113200",\
						" 0.102800, 0.107300, 0.115700, 0.135200, 0.183300",\
						" 0.223900, 0.225000, 0.228300, 0.258900, 0.301700",\
						" 1.159500, 1.159300, 1.160100, 1.168500, 1.182000");
				}
				fall_transition(scalar){
					values("0.2") ;
				}
                cell_rise(template_3d) {
                    values("0.00,0.23,0.3", "0.11,0.28,0.4", \
                           "0.00,0.24,0.33", "0.10,0.33,0.41");
                }
                cell_fall(template_3d) {
                    values("0.00,0.23,0.4", "0.11,0.28,0.43", \
                           "0.00,0.24,0.32", "0.10,0.33,0.42");
                }
			}
		}
		bus(D) {
			bus_type : "sixteen";
			clock : "true";
		}
		bus(E) {
			bus_type : "thirtytwo";
		}
		ff_bank(x,y,16) {
			next_state : "D";
		}
		ff_bank(x4,y4,32) {
			next_state : "E";
		}
	    bundle( H0A ) {                /* synopsys 3.0b add */
			members(  H01, H02, H03, H04  ) ;
      		direction : input ;
		    pin( H01 ) {
        		capacitance : 0.015785 ;
		        timing(  ) {
        		  related_pin : "H05" ;
		          timing_type : setup_rising ;
		          rise_constraint( scalar ) {
		            values( "0.720000" ) ;
		          }
		          fall_constraint( scalar ) {
		            values( "0.720000" ) ;
	          }
			}
		  }
		}
	  ff_bank (  "QN01", "QN02", 4  ) {     /* synopsys 3.0b add */
    	 clocked_on : "H05" ;
	     next_state : "H0A" ;
	     clear : "H06" ;
	  }
	  ff_bank (  "QN03", "QN04", 5  ) {     /* synopsys 3.0b add */
    	 clocked_on : "H05" ;
	     next_state : "H0A" ;
	     clear : "H06" ;
	  }
  bundle(CR) {
  members (CR0,CR1);
  direction : input;
    capacitance : 1;
    timing() {
      timing_type : setup_rising;
      intrinsic_rise : 1.6;
      intrinsic_fall : 1.6;
      related_pin : "CP";
    }
    timing() {
      timing_type : hold_rising;
      intrinsic_rise : 0.2;
      intrinsic_fall : 0.2;
      related_pin : "CP";
    }
  }
  bundle(LD) {
  members (LD0,LD1);
  direction : input;
    capacitance : 1;
    timing() {
      timing_type : setup_rising;
      intrinsic_rise : 1.6;
      intrinsic_fall : 1.6;
      related_pin : "CP";
    }
    timing() {
      timing_type : hold_rising;
      intrinsic_rise : 0.2;
      intrinsic_fall : 0.2;
      related_pin : "CP";
    }
  }
	  ff_bank("IQ","IQN", 2) {
    	next_state : "CR (DW LD + IQ LD')";
	    clocked_on : "CP";
	  }
  bundle(DW) {
  members (D0,D1);
  direction : input;
    capacitance : 1;
    timing() {
      timing_type : setup_rising;
      intrinsic_rise : 1.6;
      intrinsic_fall : 1.6;
      related_pin : "CP";
    }
    timing() {
      timing_type : hold_rising;
      intrinsic_rise : 0.2;
      intrinsic_fall : 0.2;
      related_pin : "CP";
    }
  }
  bundle(Q) {
  members (Q0,Q1,Q3);
  direction : output;
    function : "IQ";
    timing() {
      timing_type : rising_edge;
      intrinsic_rise : 1.09;
      intrinsic_fall : 1.25;
      rise_resistance : 0.1458;
      fall_resistance : 0.0589;
      related_pin : "CP";
    }
  }
  bundle(QN) {
  members (QN0,QN1);
  direction : output;
    function : "IQN";
    timing() {
      timing_type : rising_edge;
      intrinsic_rise : 1.47;
      intrinsic_fall : 1.55;
      rise_resistance : 0.1523;
      fall_resistance : 0.0589;
      related_pin : "CP";
    }
  }

	}
	cell(OR2){
		area : 2;
		pin(A, B){
			direction : input;
			capacitance : 1;
		}
		pin(Z){
			direction : output;
			function : "A + B";
			timing () {
				intrinsic_rise  : 0.38;
				intrinsic_fall  : 0.85;
				rise_resistance : 0.1443;
				fall_resistance : 0.0589;
				related_pin : "A B";
			}
		}	
	}
}
